feat: 打通用户端公共浏览与通知真实数据